对象型比较大小调整为sort字段和集合型排序列表一致